--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<hed>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,6 @@
     <p>
     East or west shiraz is the best!!
     </p>
-<p>Deepthi has no a in her name</p>
+<p>Hafeezath is from manipal </p>
 </body>
 </html>
